# manim-fontawesome

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: check-update.yml  publish.yml  tests.yml
scripts/: __init__.py.jinjatemplate  __init__.pyi.jinjatemplate  update.py
src/manim_fontawesome/: __init__.py  __init__.pyi
tests/: test_scene.py
