[tool.poetry]
name = "manim-fontawesome"
version = "6.0.0"
description = "Font Awesome SVG's for Manim"
authors = ["Naveen M K <naveen@manim.community>"]
repository = "https://github.com/naveen521kk/manim-fontawesome"
license = "BSD-3-Clause"
classifiers= [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Natural Language :: English",
]
readme="README.md"

[tool.poetry.dependencies]
python = "^3.7"
manim = ">=0.3<=1.0"

[tool.poetry.plugins."manim.plugins"]
"manim_fontawesome" = "manim_fontawesome"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}
jinja2 = "^3.0"
pytest = "^6.2.5"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
